--- a/jenkinsfile
+++ b/jenkinsfile
@@ -5,9 +5,9 @@ pipeline {
         stage ('Compile Stage') {
 
             steps {
-                withMaven(maven : 'maven_3_6_3') {
-                    sh 'mvn clean compile'
-                }
+              
+                    bat 'mvn clean compile'
+                
             }
         }
 
@@ -15,9 +15,7 @@ pipeline {
 
         stage ('Deployment Stage') {
             steps {
-                withMaven(maven : 'maven_3_6_3') {
-                    sh 'mvn deploy'
-                }
+               echo "Deploying Project";
             }
         }
     }
