--- a/pom.xml
+++ b/pom.xml
@@ -6,6 +6,10 @@
 	<artifactId>libraryclient</artifactId>
 	<packaging>war</packaging>
 	<version>0.0.1-SNAPSHOT</version>
+	<properties>
+          <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+          <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+        </properties>
 	<name>libraryclient Maven Webapp</name>
 	<url>http://maven.apache.org</url>
 	<dependencies>
