new jenkins file

--- a/jenkinsfile
+++ b/jenkinsfile
@@ -6,7 +6,7 @@ pipeline {
 
             steps {
               
-                    bat 'mvn clean compile'
+                    sh 'mvn clean compile'
                 
             }
         }
