New commit of jenkins file

--- a/jenkinsfile
+++ b/jenkinsfile
@@ -2,11 +2,13 @@ pipeline {
     agent any
 
     stages {
-        stage ('Compile Stage') {
+        stage ('Build Stage') {
 
             steps {
               
-                    bat 'mvn clean compile'
+                    bat 'mvn clean'
+                    bat 'mvn compile'
+                    bat 'mvn package'
                 
             }
         }
