--- a/pom.xml
+++ b/pom.xml
@@ -8,6 +8,12 @@
 	<version>0.0.1-SNAPSHOT</version>
 	<name>libraryclient Maven Webapp</name>
 	<url>http://maven.apache.org</url>
+	<properties>
+                    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+                    <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+		    <maven.compiler.source>1.8</maven.compiler.source>
+                    <maven.compiler.target>1.8</maven.compiler.target>
+        </properties>
 	<dependencies>
 
 		<dependency>
